@@ -1,5 +1,12 @@
 2010-07-20  Michael Albinus  <michael.albinus@gmx.de>
 
+	* tramp.el (tramp-file-name-handler): Trace 'quit.
+	(tramp-open-connection-setup-interactive-shell): Apply
+	workaround for IRIX64 bug.  Move argument of last
+	`tramp-send-command' where it belongs to.
+
+2010-07-20  Michael Albinus  <michael.albinus@gmx.de>
+
 	* tramp.el (tramp-perl-file-attributes)
 	(tramp-perl-directory-files-and-attributes): Don't pass "$3".
 	(tramp-maybe-open-connection): Use `async-args' and `gw-args' in
